--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 
-#last-try {
+/* #last-try {
   max-width: 40rem;
   margin: 2rem auto;
   font-size: 0.8rem;
@@ -64,31 +64,28 @@ body {
   color: #9082a3;
   margin: 0;
   text-transform: uppercase;
-}
+} */
 
-#question progress {
+/* #question progress {
   width: 50%;
   height: 0.5rem;
   border-radius: 24px;
   background: #9e5ef8;
   margin: 0;
-}
+} */
 
-#question .question-time-text{
-  /* width:25%; */
+/* #question .question-time-text{
+ 
   display:inline-block;
   padding: 0.3rem 2rem;
   border: none;
   border-radius: 24px;
-  /* background: linear-gradient(180deg, #81f1fb 0%, #73d2f8 100%); */
-  
   transition: all 0.2s ease-in-out;
-  margin:auto;
-  
+  margin:auto; 
   font-size:0.9rem
-}
+} */
 
-#question .question-time-text.blue{
+/* #question .question-time-text.blue{
   background: #6cb7f5;
   color:#000;
 }
@@ -101,11 +98,11 @@ body {
 #question .question-time-text.red{
   background: #7c0b0b;
   color:#fff;
-}
+} */
 
     
 
-#question progress::-webkit-progress-bar {
+/* #question progress::-webkit-progress-bar {
   background: #6a558a;
   border-radius: 24px;
 }
@@ -133,9 +130,16 @@ body {
   font-weight: normal;
   margin: 0.5rem 0 2.5rem 0;
   color: #c1b2dd;
-}
+} */
 
-#answers {
+
+/* .wrong {
+  background: #f55a98;
+  color: #2c203d;
+} */
+
+
+/* #answers {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -158,7 +162,6 @@ body {
   padding: 1rem 2rem;
   border: none;
   border-radius: 24px;
-  /* background: linear-gradient(180deg, #81f1fb 0%, #73d2f8 100%); */
   background: #6cb7f5;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
@@ -166,41 +169,26 @@ body {
 
 .answer button:hover,
 .answer button:focus {
-  /* background: linear-gradient(180deg, #bf48f6 0%, #9b50f2 100%); */
   background: #9d5af5;
   color: white;
-  /* box-shadow: 0 0 4px 2px rgba(255, 200, 60, 0.8); */
 }
 
-/* .answer button.selected {
-  background: #f5a76c;
-  color: #2c203d;
-} */
+
 
 .answer button.selected-button {
   background: #f5a76c;
   color: #2c203d;
 }
 
-
-
-
-/*
-.answer button.correct {
-  background: #5af59d;
-  color: #2c203d;
-}
-*/
 .answer button.selected-correct {
   background: #5af59d;
   color: #2c203d;
 }
 
 .answer button.wrong {
-  /* background: linear-gradient(180deg, #f96fb1 0%, #f52b8c 100%); */
   background: #f55a98;
   color: #2c203d;
-}
+} */
 
 #skip-action {
   margin-top: 2rem;
@@ -220,142 +208,11 @@ body {
   color: #c7bfd6;
 }
 
-#summary {
-  max-width: 40rem;
-  margin: 2rem auto;
-  padding: 2rem;
-  background: linear-gradient(180deg, #a17eda 0%, #895fc4 100%);
-  color: #191321;
-  border-radius: 8px;
-  box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.6);
-  animation: slide-in-from-bottom 0.7s ease-out;
-}
-
-#summary img {
-  display: block;
-  width: 8rem;
-  height: 8rem;
-  object-fit: contain;
-  margin: 0 auto 1rem auto;
-  padding: 1rem;
-  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.6));
-  border: 2px solid #3a2353;
-  border-radius: 50%;
-  background: #c18cfa;
-}
-
-#summary h2 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
-  text-align: center;
-  margin: 0;
-  text-transform: uppercase;
-  color: #3a2353;
-}
-
-#summary ol {
-  list-style: none;
-  margin: 2rem auto;
-  padding: 0;
-  text-align: center;
-}
-
-#summary li {
-  margin: 2rem 0;
-}
-
-#summary h3 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1rem;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #2c203d;
-  color: #d8cde8;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-}
-
-.summary-button p{
-  text-align:center
-}
-
-#summary .question {
-  margin: 0.25rem 0;
-  font-size: 1rem;
-  color: #30273a;
-}
-
-#summary .user-answer {
-  margin: 0.25rem 0;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bold;
-  color: #251e2f;
-}
-
-#summary .user-answer.correct {
-  color: #054e37;
-}
-
-#summary .user-answer.wrong {
-  color: #730b4b;
-}
-
-#summary .user-answer.skipped {
-  color: #d1baf2;
-  font-weight: normal;
-}
-
-#summary-stats {
-  display: flex;
-  gap: 3rem;
-  width: 60%;
-  margin: 2rem auto;
-  padding-bottom: 2rem;
-  border-bottom: 2px solid #594276;
-}
-
-#summary-stats p {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-}
-
-#summary-stats .number {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 3rem;
-  color: #594276;
-}
-
-#summary-stats .text {
-  font-family: 'Roboto Condensed', sans-serif;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  color: #30273a;
-  margin-top: -0.7rem;
-  margin-left: 0.2rem;
-  letter-spacing: 0.1rem;
-}
-
-@keyframes slide-in-from-bottom {
-  0% {
-    opacity: 0;
-    transform: translateY(10%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 .container-btn{
   margin-top:1em
 }
 
-button.btn-primary{
+/* button.btn-primary{
   padding:0.5em;
   border-radius:5px;
   font-size:1rem;
@@ -363,7 +220,7 @@ button.btn-primary{
   background:linear-gradient(180deg, #c1b2dd 0%, #c1b2dd 100%);
   color:#321061;
 
-  /*linear-gradient(180deg, #3e2a60 0%, #321061 100%)*/
+  
 }
 
 button.btn-primary:hover{
@@ -371,4 +228,4 @@ button.btn-primary:hover{
   background:#c1b2dd;
   color:#321061;
   cursor:pointer
-}
+} */
