--- a/src/components/QuizComponents/CoverTest/CoverTest.module.scss
+++ b/src/components/QuizComponents/CoverTest/CoverTest.module.scss
@@ -1,13 +1,12 @@
-/* File CSS per il componente CategoryReport */
-
+@use '../../../variables' as *;
 
 .intro{
-    display: flex;
+  display: flex;
   gap: 3rem;
   width: 60%;
   margin: 2rem auto;
   padding-bottom: 2rem;
-  border-bottom: 2px solid #594276;
+  border-bottom: 2px solid $color-main;
 }
 
 .cover-button p{
