--- a/src/components/QuizComponents/Quiz/Quiz.module.scss
+++ b/src/components/QuizComponents/Quiz/Quiz.module.scss
@@ -1,10 +1,13 @@
+@use '../../../variables' as *;
+
 .quiz {
     max-width: 50rem;
     margin: auto;
     padding: 2rem;
-    background: linear-gradient(180deg, #3e2a60 0%, #321061 100%);
+    //background: linear-gradient(180deg, #3e2a60 0%, #321061 100%);
+    background: linear-gradient($gradient-degree, $bg-gradient1, $bg-gradient2);
     border-radius: 8px;
     /* box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.6); */
-    box-shadow: 1px 1px 8px 4px rgba(12, 5, 32, 0.6);
+    box-shadow: $shadow-box;
     text-align: center;
   }
