--- a/src/components/QuizComponents/Summary/Summary.module.scss
+++ b/src/components/QuizComponents/Summary/Summary.module.scss
@@ -1,9 +1,10 @@
+@use '../../../variables' as *;
 .summary {
   max-width: 40rem;
   margin: 2rem auto;
   padding: 2rem;
-  background: linear-gradient(180deg, #a17eda 0%, #895fc4 100%);
-  color: #191321;
+  background: linear-gradient($gradient-degree, $bg-gradient-1, $bg-gradient-2);
+  color: $summary-color;
   border-radius: 8px;
   box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.6);
   animation: slide-in-from-bottom 0.7s ease-out;
@@ -16,9 +17,9 @@
       margin: 0 auto 1rem auto;
       padding: 1rem;
       filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.6));
-      border: 2px solid #3a2353;
+      border: 2px solid $summary-border-img;
       border-radius: 50%;
-      background: #c18cfa;
+      background: $summary-img-bg;
   }
 
   p{
@@ -31,7 +32,7 @@
       text-align: center;
       margin: 0;
       text-transform: uppercase;
-      color: #3a2353;
+      color: $summary-text;
     }
 
     ol {
@@ -52,8 +53,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #2c203d;
-      color: #d8cde8;
+      background: $summary-review-text;
+      color: $secondary-medium-light;
       width: 2rem;
       height: 2rem;
       border-radius: 50%;
@@ -62,22 +63,22 @@
     .question {
       margin: 0.25rem 0;
       font-size: 1rem;
-      color: #30273a;
+      color: $summary-review-text;
     }
 
     .user-answer {
       margin: 0.25rem 0;
       font-family: 'Roboto Condensed', sans-serif;
       font-weight: bold;
-      color: #251e2f;
+      color: $summary-review-text;
     }
 
     .user-answer.correct {
-       color: #054e37;
+       color: $summary-high-color-text;
     }
 
     .user-answer.wrong {
-        color: #730b4b;
+        color: $summary-low-color-text;
     }
 
     .user-answer.skipped {
@@ -93,7 +94,7 @@
   width: 60%;
   margin: 2rem auto;
   padding-bottom: 2rem;
-  border-bottom: 2px solid #594276;
+  border-bottom: 2px solid $summary-stat-text;
 
   p {
     flex: 1;
@@ -105,14 +106,14 @@
   .number {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 3rem;
-    color: #594276;
+    color: $summary-stat-text;
   }
 
   .text {
     font-family: 'Roboto Condensed', sans-serif;
     text-transform: uppercase;
     font-size: 0.8rem;
-    color: #30273a;
+    color: $summary-stat-text;
     margin-top: -0.7rem;
     margin-left: 0.2rem;
     letter-spacing: 0.1rem;
