--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@use '../../variables' as *;
 .header {
     margin: 2rem 0;
     text-align: center;
@@ -15,7 +16,7 @@
         letter-spacing: 0.6rem;
         margin: 0;
         text-transform: uppercase;
-        background: linear-gradient(90deg, #e781fb 40%, #8e76fa 60%);
+        background: linear-gradient($gradient-degree-bg-logo, $gradient-bg-logo-1, $gradient-bg-logo-2);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
