--- a/src/components/QuizComponents/Summary/Summary.module.scss
+++ b/src/components/QuizComponents/Summary/Summary.module.scss
@@ -1,13 +1,13 @@
 @use '../../../variables' as *;
 .summary {
-  max-width: 40rem;
-  margin: 2rem auto;
-  padding: 2rem;
-  background: linear-gradient($gradient-degree, $bg-gradient-1, $bg-gradient-2);
-  color: $summary-color;
-  border-radius: 8px;
-  box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.6);
-  animation: slide-in-from-bottom 0.7s ease-out;
+  // max-width: 40rem;
+  // margin: 2rem auto;
+  // padding: 2rem;
+  // background: linear-gradient($gradient-degree, $bg-gradient-1, $bg-gradient-2);
+  // color: $summary-color;
+  // border-radius: 8px;
+  // box-shadow: 1px 1px 8px 1px rgba(0, 0, 0, 0.6);
+  // animation: slide-in-from-bottom 0.7s ease-out;
 
   img{
       display: block;
